# Benchmarking-Hyper-Parameter-Tuning-Methods-for-Time-Series-Forecasting

./: .gitignore  FeatureExtraction.py  README.md  benchmark.py  featureExtraction.py  init.py  main.py  optimization_methods.py  pyproject.toml  setup.py  setup.sh  test.ipynb  test.py  utils.c  utils.py  utils.pyi  utils.pyx  utils_python.py
.github/workflows/: pylint.yml
data/monash/: index.txt
